<resources>
    <string name="app_name">Dcinema21</string>
    <string name="lewati">LEWATI</string>
    <string name="lanjut">LANJUT</string>
    <string name="now_playing">Now Playing</string>
    <string name="now_playing_desc">Lebih mudah untuk mengetahui film yang sedang diputar</string>
    <string name="pre_sale">Pre Sale</string>
    <string name="pre_sale_desc">Tidak perlu khawatir akan ketinggalan update film terbaru</string>
    <string name="cashless">Cashless</string>
    <string name="cashless_desc">Bayar lebih mudah dengan menggunakan dompet digital</string>
    <string name="mulai">MULAI MENGGUNAKAN APLIKASI</string>
    <string name="daftar">DAFTAR</string>
    <string name="masuk">MASUK</string>
    <string name="nanti">NANTI</string>
    <string name="sign_in">Sign In<br />Welcome to Dcinema21</string>
    <string name="sign_in_instructor">Please Sign In to continue...</string>
    <string name="type_username">Type Username</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="nama_pengguna">Nama Pengguna</string>
    <string name="username_hint">Ex: David</string>
    <string name="type_password">Type Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_up_desc">Please Sign Up to continue...</string>
    <string name="display_picture">Display Picture</string>
    <string name="display_picture_person">Welcome, David</string>
    <string name="display_picture_desc">Bolehkah aku mengetahui wajahmu?</string>
    <string name="person_name">David</string>
    <string name="balance">IDR 500,000</string>
    <string name="now_playing_section">NOW PLAYING</string>
    <string name="pre_sale_section">COMING SOON</string>
    <string name="judul_film">Kimi no Na Wa</string>
    <string name="genre_film">Drama, Romance</string>
    <string name="rate_film">9,01</string>
    <string name="storyboard_text">Storyboard</string>
    <string name="storyboard_film">Kimi no Na Wa revolves around Mitsuha and Taki’s actions, which begin to have a dramatic impact on each other’s lives, weaving them into a fabric held together by fate and circumstance.</string>
    <string name="actors_text">Actors</string>
    <string name="tonton_film">TONTON FILM INI</string>
    <string name="pesan_bangku">PESAN BANGKU</string>
    <string name="seat_title">Pilih Bangku</string>
    <string name="layar_bioskop">Layar Bioskop</string>
    <string name="available">Available</string>
    <string name="booked">Booked</string>
    <string name="yours">Yours</string>
    <string name="checkout_title">Checkout</string>
    <string name="date_place">Tanggal Dan Tempat</string>
    <string name="tanggal">Tanggal</string>
    <string name="tempat">Tempat</string>
    <string name="bangku">Bangku</string>
    <string name="seat_position">Seat</string>
    <string name="your_balance">Saldo-mu</string>
    <string name="beli">Beli</string>
    <string name="ubah">UBAH</string>
    <string name="lihat_tiket">Lihat Tiket</string>
    <string name="wallet">My Wallet</string>
    <string name="saldo_tersedia">Saldo Tersedia</string>
    <string name="daftar_transaksi">Daftar Transaksi</string>
    <string name="history_text">History</string>
    <string name="selamat_menonton">Selamat Menonton!</string>
    <string name="success_desc">Terima kasih telah membeli tiket bioskop dengan aplikasi D’cinema21 kami! Selamat menonton film anda dan Have Fun!</string>
    <string name="simpan_dan_lanjut">SIMPAN DAN LANJUT</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>