<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorDarkBlue"
    tools:context=".checkout.CheckoutActivity">

    <TextView
        android:id="@+id/textView31"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="70dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="70dp"
        android:fontFamily="@font/viga"
        android:gravity="center"
        android:text="@string/selamat_menonton"
        android:textColor="@color/yellowText"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_home"
        android:layout_width="246dp"
        android:layout_height="68dp"
        android:layout_marginStart="57dp"
        android:layout_marginEnd="57dp"
        android:layout_marginBottom="41dp"
        android:background="@drawable/red_button_rounded"
        android:fontFamily="@font/viga"
        android:text="Home"
        android:textColor="@color/yellowText"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btn_tiket"
        android:layout_width="246dp"
        android:layout_height="68dp"
        android:layout_marginStart="57dp"
        android:layout_marginEnd="57dp"
        android:layout_marginBottom="24dp"
        android:background="@drawable/red_button_rounded"
        android:fontFamily="@font/viga"
        android:text="@string/lihat_tiket"
        android:textColor="@color/yellowText"
        android:textSize="25sp"
        app:layout_constraintBottom_toTopOf="@+id/btn_home"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/imageView14"
        android:layout_width="180dp"
        android:layout_height="168dp"
        android:layout_marginStart="86dp"
        android:layout_marginTop="14dp"
        android:layout_marginEnd="86dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView31"
        app:srcCompat="@drawable/success_ic" />

    <TextView
        android:id="@+id/textView32"
        android:layout_width="0dp"
        android:layout_height="135dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="21dp"
        android:layout_marginEnd="32dp"
        android:fontFamily="@font/viga"
        android:gravity="center"
        android:text="@string/success_desc"
        android:textColor="@color/yellowText"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView14" />
</androidx.constraintlayout.widget.ConstraintLayout>